# razertray

./: Cargo.toml  Dockerfile  README.md
.github/: release.yml
.github/workflows/: label-release-notes.yml  pr-build.yml  release-device-map-merge.yml  release-on-tag.yml  update-device-map.yml
docs/: forecast.md  notifications.md  releases.md
src/: app.rs  autostart.rs  config.rs  device_map.rs  forecast.rs  icon.rs  lib.rs  main.rs  model.rs  notify.rs  tray.rs
src/hid/: client.rs  mod.rs  protocol.rs  scanner.rs
tools/: bump_patch_version.py  extract_openrazer_map.py
