[package]
name = "razertray"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
hidapi = { version = "2.6.5", features = ["windows-native"] }
serde = { version = "1.0.228", features = ["derive"] }
tao = "0.34.5"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tray-icon = "0.21.3"

[package.metadata.release]
publish = false
push = false
tag = false

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
winreg = "0.55.0"
